@@ -333,7 +333,7 @@ BrassDatabase::get_changeset_revisions(const string & path,
 				       brass_revision_number_t * startrev,
 				       brass_revision_number_t * endrev) const
 {
-    FD changes_fd(posixy_open(path.c_str(), O_RDONLY));
+    FD changes_fd(posixy_open(path.c_str(), O_RDONLY | O_CLOEXEC));
     if (changes_fd < 0) {
 	string message = string("Couldn't open changeset ")
 		+ path + " to read";
@@ -401,7 +401,7 @@ BrassDatabase::set_revision_number(brass_revision_number_t new_revision)
 	if (old_revision) {
 	    // Don't generate a changeset for the first revision.
 	    changes_name = db_dir + "/changes" + str(old_revision);
-	    changes_fd = posixy_open(changes_name.c_str(), O_WRONLY | O_CREAT | O_TRUNC, 0666);
+	    changes_fd = posixy_open(changes_name.c_str(), O_WRONLY | O_CREAT | O_TRUNC | O_CLOEXEC, 0666);
 	    if (changes_fd < 0) {
 		string message = string("Couldn't open changeset ")
 			+ changes_name + " to write";
@@ -551,7 +551,7 @@ BrassDatabase::send_whole_database(RemoteConnection & conn, double end_time)
     for (const char * p = filenames; *p; p += *p + 1) {
 	string leaf(p + 1, size_t(static_cast<unsigned char>(*p)));
 	filepath.replace(db_dir.size() + 1, string::npos, leaf);
-	FD fd(posixy_open(filepath.c_str(), O_RDONLY));
+	FD fd(posixy_open(filepath.c_str(), O_RDONLY | O_CLOEXEC));
 	if (fd >= 0) {
 	    conn.send_message(REPL_REPLY_DB_FILENAME, leaf, end_time);
 	    conn.send_file(REPL_REPLY_DB_FILEDATA, fd, end_time);
@@ -651,7 +651,7 @@ BrassDatabase::write_changesets_to_fd(int fd,
 
 	    // Look for the changeset for revision start_rev_num.
 	    string changes_name = db_dir + "/changes" + str(start_rev_num);
-	    FD fd_changes(posixy_open(changes_name.c_str(), O_RDONLY));
+	    FD fd_changes(posixy_open(changes_name.c_str(), O_RDONLY | O_CLOEXEC));
 	    if (fd_changes >= 0) {
 		// Send it, and also update start_rev_num to the new value
 		// specified in the changeset.
