@@ -69,7 +69,7 @@ BrassVersion::create()
     uuid_generate(uuid);
     memcpy(buf + MAGIC_LEN + 4, (void*)uuid, 16);
 
-    int fd = ::open(filename.c_str(), O_WRONLY|O_CREAT|O_TRUNC|O_BINARY, 0666);
+    int fd = ::open(filename.c_str(), O_WRONLY|O_CREAT|O_TRUNC|O_BINARY|O_CLOEXEC, 0666);
 
     if (fd < 0) {
 	string msg("Failed to create brass version file: ");
@@ -94,7 +94,7 @@ BrassVersion::create()
 void
 BrassVersion::read_and_check()
 {
-    int fd = ::open(filename.c_str(), O_RDONLY|O_BINARY);
+    int fd = ::open(filename.c_str(), O_RDONLY|O_BINARY|O_CLOEXEC);
 
     if (fd < 0) {
 	string msg = filename;
